--- a/myblog/mkdocs.yml
+++ b/myblog/mkdocs.yml
@@ -1,3 +1,25 @@
-site_name: My Docs
+site_name: Sad
+nav:
+- 算法竞赛 :
+    - 模板整理 :
+      - 欧拉回路相关问题: algorithm/欧拉回路相关问题.md
+    - 训练记录 : algorithm/train.md
+
+- About: about.md
 theme:
-  name: 'material'
+  name: material
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
